--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prestart": "knex migrate:rollback && knex migrate:latest && knex seed:run",
+    "prestart": "knex migrate:latest",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
